# loop-hunter

./: .gitignore  ANALYZER-COMPARISON.md  CMakeLists.txt  INTEGRATION.md  LoopHunter.cpp  NOTICE  README.md  build.sh  scan-codebase.py
tests/: negative_reducible.cpp  positive_irreducible.cpp  run-tests.py
